--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  image_picker: ^0.5.0+3
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
