--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  image_picker: ^0.5.0+3
+  image_picker: ^0.6.1+4
+  firebase_auth: ^0.14.0+5
   flutter_signin_button: ^0.2.5
+  google_sign_in: ^4.0.7
+  cloud_firestore: ^0.12.9+3
+  firebase_storage: ^3.0.6
+
+
+
 
 
 
